--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="about-content">
           <!-- Professional image illustrating global trade -->
           <img src="https://images.unsplash.com/photo-1578575437130-527eed3abbec?w=800" alt="Global Trade Network Illustration" class="about-image" />
-          <p>Al Massria Al Emaratia for Import, Export, and Commercial Agencies was established in 2020 with strong roots in Egypt and the UAE, serving as a strategic hub for global trade. We specialize in importing from global markets into Egypt and exporting high-quality Egyptian products to international destinations, creating valuable commercial opportunities for our global partners.</p>
+          <p>Al Masriya Al Emaratiya for Import, Export, and Commercial Agencies was established in 2010 with strong roots in Egypt and the UAE, serving as a strategic hub for global trade. We specialize in importing from global markets into Egypt and exporting high-quality Egyptian products to international destinations, creating valuable commercial opportunities for our global partners.</p>
           <p>With our deep knowledge of international markets and extensive global networks, we provide comprehensive services to help businesses navigate the complexities of global trade. Our team of experts offers tailored solutions to connect businesses with global opportunities and bring international products to their desired markets.</p>
           <p>Our mission is to enhance the region's position as a gateway for global trade, contributing to the growth and prosperity of businesses through strategic international partnerships and innovative trade solutions that link our markets to the world.</p>
         </div>
