--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - Al Massria Al Emaratia</title>
-  <!-- Font & Icons -->
+  <title>Contact Us - Al Masriya Al Emaratiya</title>
+  
+  <!-- SEO Enhancements -->
+  <meta name="description" content="Contact Egy-UAE for inquiries about import and export services, commercial agencies, or support. We are here to help you.">
+  <meta name="keywords" content="contact us, connect, Egy-UAE, import, export, commercial agencies, phone number, email, address, technical support, consultations">
+  <meta name="author" content="Egy-UAE">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Contact Us | Egy-UAE">
+  <meta property="og:description" content="We look forward to hearing from you. Use the form below or contact us directly using the available details.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1543269865-cbf427fdc121?w=800"> <!-- Suitable image for contact page -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.egy-uae.com/contact.html">
+  <meta property="og:site_name" content="Al Masriya Al Emaratiya">
+
+  <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
   <style>
+    /* Basic Reset Styles */
     * {margin:0;padding:0;box-sizing:border-box;font-family:"Cairo",sans-serif;}
-    body {background:#f7f9fc;color:#333;line-height:1.6;}
+    body {background:#f7f9fc;color:#333;line-height:1.6;direction:ltr;} /* LTR support */
     a{text-decoration:none;color:inherit;}
     ul{list-style:none;}
 
@@ -28,25 +44,57 @@
     }
 
     /* Header */
-    header{background:linear-gradient(90deg,#1976d2,#0d47a1);padding:1rem 0;color:#fff;
-      box-shadow:0 3px 6px rgba(0,0,0,0.2);animation:fadeSlideDown 0.8s ease;}
+    header{
+      background:linear-gradient(90deg,#1976d2,#0d47a1);
+      padding:1rem 0;
+      color:#fff;
+      box-shadow:0 3px 6px rgba(0,0,0,0.2);
+      animation:fadeSlideDown 0.8s ease;
+      position:fixed; /* Fixed header */
+      width:100%;
+      top:0;
+      z-index:1000;
+      display: flex; /* For horizontal arrangement */
+      justify-content: space-between; /* Distribute items to edges */
+      align-items: center; /* Vertically align items */
+      flex-wrap: wrap; /* Allow items to wrap */
+    }
     .container{width:90%;max-width:1200px;margin:auto;}
     header .logo{font-size:1.5rem;font-weight:700;}
-    nav ul{display:flex;gap:1.5rem;justify-content:flex-end;}
+    header .logo a {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #fff;
+        text-decoration: none;
+    }
+    .company-logo-header {
+      height: 40px;
+      vertical-align: middle;
+      margin-right: 10px; /* Adjusted for LTR */
+      margin-left: 0;
+    }
+    nav ul{display:flex;gap:1.5rem;justify-content:flex-end;} /* Adjusted for LTR */
     nav ul li a{color:#fff;font-weight:600;position:relative;padding-bottom:4px;}
     nav ul li a::after{
-      content:"";position:absolute;left:0;bottom:0;width:0;height:2px;background:#bbdefb;
+      content:"";position:absolute;left:0;bottom:0;width:0;height:2px;background:#bbdefb; /* Adjusted for LTR */
       transition:width 0.3s ease;
     }
     nav ul li a:hover::after,nav ul li a.active::after{width:100%;}
 
     header .container{display:flex;justify-content:space-between;align-items:center;}
+    .menu-toggle {
+      display: none;
+      font-size: 2rem;
+      cursor: pointer;
+      color: #fff;
+    }
 
     /* Contact Section */
-    .contact{padding:3rem 0;}
-    .contact h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;
+    .contact{padding:3rem 0;margin-top:90px;} /* Offset for fixed header height */
+    .contact h2{text-align:center;font-size:2.5rem;margin-bottom:1rem;color:#0d47a1;
       animation:fadeIn 1s ease;}
-    .contact p{text-align:center;margin-bottom:2rem;color:#555;animation:fadeIn 1.3s ease;}
+    .contact p{text-align:center;font-size:1.1rem;margin-bottom:2.5rem;color:#555;animation:fadeIn 1.3s ease;max-width:800px;margin-left:auto;margin-right:auto;}
     .contact-grid{display:grid;grid-template-columns:1fr 1fr;gap:2rem;}
     .contact-form,.contact-info{background:#fff;padding:2rem;border-radius:12px;
       box-shadow:0 4px 10px rgba(0,0,0,0.1);animation:fadeIn 1.6s ease;}
@@ -54,86 +102,110 @@
     /* Form */
     form label{display:block;margin:0.8rem 0 0.3rem;font-weight:600;}
     form input,form textarea{width:100%;padding:0.8rem;border:1px solid #ccc;border-radius:8px;
-      margin-bottom:1rem;transition:0.3s;}
+      margin-bottom:1rem;transition:0.3s;direction:ltr;text-align:left;} /* LTR support */
     form input:focus,form textarea:focus{border-color:#0d47a1;outline:none;}
     .btn{background:#0d47a1;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;
-      cursor:pointer;font-weight:600;transition:background 0.3s, transform 0.2s;}
+      cursor:pointer;font-weight:600;transition:background 0.3s, transform 0.2s;display:flex;align-items:center;justify-content:center;gap:10px;}
     .btn:hover{background:#1976d2;transform:scale(1.05);}
+    .btn i {order: 1;} /* Icon order before text in LTR */
 
     /* Contact Info */
-    .contact-info h3{margin-bottom:1rem;color:#0d47a1;}
-    .contact-info p{margin-bottom:1rem;display:flex;align-items:center;gap:0.6rem;
-      transition:transform 0.3s;}
-    .contact-info p:hover{transform:translateX(5px);}
+    .contact-info h3{margin-bottom:1.5rem;color:#0d47a1;font-size:1.3rem;}
+    .contact-info p{margin-bottom:1.2rem;display:flex;align-items:center;gap:0.6rem;
+      transition:transform 0.3s;text-align:left;justify-content:flex-start;} /* LTR support */
+    .contact-info p:hover{transform:translateX(5px);} /* Adjusted for LTR */
     .contact-info i{color:#0d47a1;font-size:1.2rem;transition:0.3s;}
     .contact-info p:hover i{animation:iconBounce 0.6s;}
 
     /* Footer */
-    footer{background:#222;color:#aaa;padding:1rem 0;text-align:center;margin-top:2rem;}
-    footer p{font-size:0.9rem;}
+    footer{background:#0d47a1;color:#fff;padding:1.5rem 0;text-align:center;margin-top:3rem;}
+    footer p{font-size:0.95rem;margin-bottom:10px;}
+    footer .social a{color:#fff;margin:0 10px;font-size:1.4rem;transition:color 0.3s;}
+    footer .social a:hover{color:#bbdefb;}
 
-    /* Responsive */
-    @media(max-width:768px){
+    /* Responsive Design */
+    @media(max-width:992px){
       .contact-grid{grid-template-columns:1fr;}
-      nav ul{flex-direction:column;gap:0.5rem;}
-      header .container{flex-direction:column;align-items:flex-start;}
+      nav ul{display:none;flex-direction:column;width:100%;background:#0d47a1;position:absolute;top:70px;left:0;padding-bottom:15px;z-index:1000;}
+      nav ul.nav-active{display:flex;}
+      nav ul li{text-align:center;margin:10px 0;}
+      nav ul li a{padding:10px 0;display:block;}
+      .menu-toggle{display:block;}
+      header .container{flex-direction:column;align-items:flex-start;} /* Adjusted for column alignment in LTR */
+      .contact h2{font-size:2rem;}
+      .contact p{font-size:1rem;}
     }
-    /* تصميم الزر الخاص بالترجمة */
-#google_translate_element select {
-  padding: 6px 10px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  background-color: #f5f5f5;
-  color: #333;
-  font-weight: 500;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
+    @media(max-width:768px){
+      .contact{padding:2rem 0;margin-top:80px;}
+      .contact h2{font-size:1.8rem;}
+      .contact p{font-size:0.9rem;}
+      .contact-form, .contact-info{padding:1.5rem;}
+      .contact-info h3{font-size:1.2rem;}
+      .contact-info p{font-size:0.95rem;justify-content:center;}
+      .btn{padding:0.7rem 1.2rem;}
+    }
 
-#google_translate_element select:hover {
-  background-color: #eaeaea;
-}
+    /* Custom Language Switcher Button Design */
+    .language-switcher {
+      position: relative;
+      display: inline-block;
+      margin-right: 20px; /* Adjusted for LTR */
+      font-size: 1rem;
+    }
+
+    .language-switcher a {
+      color: #fff;
+      text-decoration: none;
+      padding: 8px 15px;
+      border: 1px solid #bbdefb;
+      border-radius: 5px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .language-switcher a:hover {
+      background-color: #bbdefb;
+      color: #0d47a1;
+    }
+
+    .language-switcher a i {
+      font-size: 1.2em;
+    }
   </style>
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="container">
-      <h1 class="logo">Al Massria Al Emaratia</h1>
+      <h1 class="logo">
+        <a href="index.html">
+            <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="Egy-UAE Logo" class="company-logo-header">
+            Egy-UAE
+        </a>
+      </h1>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
+        <ul class="nav-links">
+          <li><a href="home.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="faqs.html">FAQs</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact Us</a></li>
         </ul>
       </nav>
+      <div class="language-switcher">
+        <a href="contact-ar.html" aria-label="Arabic Language"><i class="fas fa-globe"></i> العربية</a>
+      </div>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
-      <!-- زر اللغة -->
-  <div id="google_translate_element" style="margin-left: 20px;"></div>
-
-<!-- جوجل ترانسليت -->
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement(
-    {
-      pageLanguage: 'en', 
-      includedLanguages: 'ar,en,de,tr,hi,zh-CN', 
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    },
-    'google_translate_element'
-  );
-}
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </header>
 
   <!-- Contact Section -->
   <section class="contact">
     <div class="container">
       <h2>Contact Us</h2>
-      <p>We’d love to hear from you. Get in touch with us through the form below or via our contact details.</p>
+      <p>We are happy to hear from you. You can use the form below or contact us directly using the provided contact details.</p>
       
       <div class="contact-grid">
         <!-- Contact Form -->
@@ -145,21 +217,31 @@ function googleTranslateElementInit() {
             <label for="email">Email Address</label>
             <input type="email" id="email" name="Email" placeholder="Enter your email" required />
 
-            <label for="message">Message</label>
-            <textarea id="message" name="Message" rows="5" placeholder="Write your message..." required></textarea>
+            <label for="message">Your Message</label>
+            <textarea id="message" name="Message" rows="5" placeholder="Write your message here..." required></textarea>
 
             <button type="submit" class="btn"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
           </form>
         </div>
 
-        <!-- Contact Info -->
+        <!-- Contact Information -->
         <div class="contact-info">
           <h3>Our Contact Details</h3>
-          <p><i class="fa-solid fa-location-dot"></i> <strong>Address:</strong> 10th of Ramadan, Al Sharqia, Egypt</p>
+          <p><i class="fa-solid fa-location-dot"></i> <strong>Address:</strong> 10th of Ramadan City, Sharqia, Egypt</p>
           <p><i class="fa-solid fa-phone"></i> <strong>Phone:</strong> +20 101 176 6232</p>
           <p><i class="fa-solid fa-envelope"></i> <strong>Email:</strong> info@egy-uae.com</p>
           <p><i class="fa-solid fa-globe"></i> <strong>Website:</strong> www.egy-uae.com</p>
-          <p><i class="fa-brands fa-whatsapp"></i> <strong>Support:</strong> +20 101 337 8572</p>
+          <p><i class="fa-brands fa-whatsapp"></i> <strong>Technical Support & WhatsApp:</strong> +20 101 337 8572</p>
+          <!-- You can add a Google map here -->
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.793751098679!2d31.737119284883984!3d30.04441998188151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14582f3c0e3e2d7f%3A0xf0db7c5e2d6b7e1!2z10th%20of%20Ramadan%20City%2C%20Al%20Sharqia%20Governorate!5e0!3m2!1sen!2seg!4v1678912345678!5m2!1sen!2seg" 
+            width="100%" 
+            height="250" 
+            style="border:0; border-radius: 8px; margin-top: 1.5rem;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
         </div>
       </div>
     </div>
@@ -168,8 +250,19 @@ function googleTranslateElementInit() {
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
+      <p>&copy; 2025 Al Masriya Al Emaratiya. All Rights Reserved.</p>
+      <div class="social">
+        <a href="https://www.facebook.com/yourcompany" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com/company/yourcompany" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
     </div>
   </footer>
+
+  <script>
+    function toggleMenu() {
+      const navLinks = document.querySelector('.nav-links');
+      navLinks.classList.toggle('nav-active');
+    }
+  </script>
 </body>
 </html>
