--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@
       <h1 class="logo">
         <a href="index.html">
             <img src="https://i.postimg.cc/C5SkqykS/IMG-20241008-WA0000-removebg-preview.png" alt="Egy-UAE Logo" class="company-logo-header">
-            Egy-UAE
+            Al Masriya Al Emaratiya
         </a>
       </h1>
       <nav>
