--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="faqs.html">FAQs</a></li>
