--- a/privacy-ar.html
+++ b/privacy-ar.html
@@ -118,7 +118,7 @@
       <a href="services.html">خدماتنا</a>
       <a href="contact">اتصل بنا</a>
     </nav>
-    <a href="privacy-policy-en.html" class="translation-btn">
+    <a href="privacy.html" class="translation-btn">
       <i class="fas fa-globe"></i> English
     </a>
   </header>
