--- a/privacy-ar.html
+++ b/privacy-ar.html
@@ -155,7 +155,7 @@
 
   <!-- Back Button -->
   <div class="back-btn">
-    <a href="index.html"><i class="fas fa-arrow-right"></i> العودة إلى الرئيسية</a> <!-- تم تغيير اتجاه السهم ليناسب RTL -->
+    <a href="home-ar.html"><i class="fas fa-arrow-right"></i> العودة إلى الرئيسية</a> <!-- تم تغيير اتجاه السهم ليناسب RTL -->
   </div>
 
   <!-- Footer -->
