--- a/terms.html
+++ b/terms.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms & Conditions - Import & Export</title>
+  <title>Terms & Conditions - Egyptian Emirati Foundation for Import & Export</title>
   <meta name="description" content="Read the Terms & Conditions of Egyptian Emirati Foundation for Import & Export to understand the rules and policies governing the use of our services.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -19,7 +18,7 @@
     }
 
     /* Banner */
-    header {background: linear-gradient(90deg, #004aad, #0077ff);padding: 15px 0;}
+    header {background: linear-gradient(90deg, #004aad, #0077ff);padding: 15px 0;position: relative;}
     nav {display: flex;justify-content: center;gap: 30px;}
     nav a {
       text-decoration: none;color: #fff;font-weight: 500;font-size: 16px;position: relative;
@@ -29,6 +28,33 @@
       transition: width 0.3s ease;border-radius: 2px;
     }
     nav a:hover::after, nav a.active::after {width: 100%;}
+
+    /* Translation Button */
+    .translation-btn {
+      position: absolute;
+      right: 20px; /* Position for LTR */
+      top: 50%;
+      transform: translateY(-50%);
+      background: #fff;
+      color: #004aad;
+      padding: 8px 12px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    .translation-btn:hover {
+      background: #e0e0e0;
+      color: #00327a;
+      transform: translateY(-50%) scale(1.05);
+    }
+    .translation-btn i {
+      font-size: 18px;
+    }
 
     /* Hero */
     .hero {
@@ -54,6 +80,30 @@
     /* Footer */
     footer {background: #004aad;color: white;text-align: center;padding: 20px 10px;margin-top: 40px;}
     footer p {font-size: 14px;}
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      nav {flex-direction: column;gap: 15px;}
+      .translation-btn {
+        position: static;
+        transform: none;
+        margin-top: 15px;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .hero h1 {font-size: 32px;}
+      .hero p {font-size: 18px;}
+      section {margin: 30px auto;padding: 15px;}
+      section h2 {font-size: 22px;}
+    }
+
+    @media (max-width: 480px) {
+      .hero h1 {font-size: 28px;}
+      .hero p {font-size: 16px;}
+      .back-btn a {padding: 10px 20px;}
+    }
+
   </style>
 </head>
 <body>
@@ -66,6 +116,9 @@
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <a href="terms-ar.html" class="translation-btn">
+      <i class="fas fa-globe"></i> العربية
+    </a>
   </header>
 
   <!-- Hero -->
@@ -111,7 +164,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Al Massria Al Emaratia Foundation - All rights reserved.</p>
+    <p>&copy; 2025 Al Masriya Al Emaratiya Foundation - All rights reserved.</p>
   </footer>
 
 </body>
