--- a/terms-ar.html
+++ b/terms-ar.html
@@ -118,7 +118,7 @@
       <a href="services.html">خدماتنا</a>
       <a href="contact.html">اتصل بنا</a>
     </nav>
-    <a href="terms-conditions-en.html" class="translation-btn">
+    <a href="terms.html" class="translation-btn">
       <i class="fas fa-globe"></i> English
     </a>
   </header>
