--- a/terms-ar.html
+++ b/terms-ar.html
@@ -113,10 +113,10 @@
   <!-- Banner -->
   <header>
     <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="about.html">عنّا</a>
-      <a href="services.html">خدماتنا</a>
-      <a href="contact.html">اتصل بنا</a>
+      <a href="home-ar.html">الرئيسية</a>
+      <a href="about-ar.html">عنّا</a>
+      <a href="services-ar.html">خدماتنا</a>
+      <a href="contact-ar.html">اتصل بنا</a>
     </nav>
     <a href="terms.html" class="translation-btn">
       <i class="fas fa-globe"></i> English
