--- a/index.html
+++ b/index.html
@@ -234,12 +234,11 @@
 
             <nav aria-label="Main navigation" style="display:flex;align-items:center;gap:14px">
                 <ul class="main-nav" role="menubar">
-                    <li role="none"><a role="menuitem" href="#home">Home</a></li>
-                    <li role="none"><a role="menuitem" href="#about">About</a></li>
-                    <li role="none"><a role="menuitem" href="#services">Services</a></li>
-                    <li role="none"><a role="menuitem" href="#team">Team</a></li>
-                    <li role="none"><a role="menuitem" href="#partners">Partners</a></li>
-                    <li role="none"><a role="menuitem" href="#contact">Contact</a></li>
+                    <li role="none"><a role="menuitem" href="index.html">Home</a></li>
+                    <li role="none"><a role="menuitem" href="about.html">About</a></li>
+                    <li role="none"><a role="menuitem" href="services.html">Services</a></li>
+                    <li role="none"><a role="menuitem" href="faqs.html">FAQs</a></li>
+                    <li role="none"><a role="menuitem" href="contact.html">Contact</a></li>
                 </ul>
 
                 <div class="nav-right">
