--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <h2 id="team-heading">Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member-card">
-                    <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Ahmed Adel, Founder & CEO">
+                    <img src="https://i.postimg.cc/nr9mMKCv/Mr-Ismail-El-Menshawy.jpg" alt="Ismail El-Menshawy, Founder & CEO">
                     <h4>Ismail El-Menshawy</h4>
                     <p>Founder & CEO</p>
                     <div class="social-links">
