--- a/index.html
+++ b/index.html
@@ -292,7 +292,9 @@
                     <div class="meta">
                         <div class="m-title">Door-to-door solutions</div>
                         <div class="m-sub">Customs — Documentation — Warehousing — Local distribution</div>
-                        <div href="contact.html" class="btn-ghost" class="m-cta">Start a shipment</div>
+                       <div class="m-cta">
+                          <a href="#shipment"  aria-label="Start a shipment">Start a shipment</a>
+                         </div>
                         <div style="font-size:.86rem;color:var(--muted);margin-top:8px">Trusted partners in freight & customs across Egypt & UAE</div>
                     </div>
                 </div>
