--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div class="cards" style="margin-top:28px">
                     <div class="card" aria-hidden="false">
                         <div style="display:flex;gap:12px;align-items:center">
-                            <div class="card-img"><img src="https://images.pexels.com/photos/186774/pexels-photo-186774.jpeg" alt="fast logistics"></div>
+                            <div class="card-img"><img src="https://png.pngtree.com/thumb_back/fh260/background/20250701/pngtree-cinematic-view-of-a-red-volvo-truck-with-cargo-containers-at-image_17582951.jpg" alt="fast logistics"></div>
                             <div>
                                 <h3>Reliable Logistics</h3>
                                 <p>Flexible shipping options across major routes & partners.</p>
