--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <h2 id="partners-heading">Our Strategic Partners</h2>
             <div class="partners" role="region" aria-label="Logos of partners">
                 <div class="partners-track" id="partners-track">
-                    <div class="partner"><img src="https://images.pexels.com/photos/163167/doctors-hands-meeting-163167.jpeg?w=640" alt="Partner 1" style="height:48px;object-fit:contain"></div>
+                    <div class="partner"><img src="https://images.seeklogo.com/logo-png/4/2/dhl-logo-png_seeklogo-40800.png" alt="Partner 1" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?w=640" alt="Partner 2" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3228877/pexels-photo-3228877.jpeg?w=640" alt="Partner 3" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3184328/pexels-photo-3184328.jpeg?w=640" alt="Partner 4" style="height:48px;object-fit:contain"></div>
