--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://images.pexels.com/photos/1181686/pexels-photo-1181686.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Karim Mansour, Head of Logistics">
+                    <img src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg" alt="Karim Mansour, Head of Logistics">
                     <h4>Ahmed Badrawi</h4>
                     <p>Head of Digital Transformation</p>
                     <div class="social-links">
