--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="container nav">
             <div class="brand" aria-label="Al Masriya Al Emaratia brand">
                 <a href="index.html" style="display:flex;align-items:center;gap:10px;color:inherit">
-                    <img src="https://i.postimg.cc/c43bgBcF/Untitled-design-4-removebg-preview.png" alt="Al Masriya Al Emaratia logo">
+                    <img src="https://i.postimg.cc/0Nbxt9wy/IMG-20241008-WA0000.jpg" alt="Al Masriya Al Emaratia logo">
                     <span style="color:#fff;font-weight:700">Al Masriya Al Emaratia</span>
                 </a>
             </div>
