--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
             <div class="hero-card" aria-hidden="false">
                 <div class="hero-visual">
                     <div class="img-wrap" aria-hidden="true">
-                        <img src="https://images.pexels.com/photos/12810604/pexels-photo-12810604.jpeg" alt="Container ship moving to horizon — global trade">
+                         <video autoplay muted loop playsinline style="width:100%;height:100%;object-fit:cover;border-radius:12px;">
+      <source src="https://www.pexels.com/download/video/6170599/" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
                     </div>
                     <div class="meta">
                         <div class="m-title">Door-to-door solutions</div>
