--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <div class="team-grid">
                 <div class="team-member-card">
                     <img src="https://i.postimg.cc/nr9mMKCv/Mr-Ismail-El-Menshawy.jpg" alt="Ismail El-Menshawy, Founder & CEO">
-                    <h4>Ismail El-Menshawy</h4>
+                    <h4>Mr. Ismail El-Menshawy</h4>
                     <p>Founder & CEO</p>
                     <div class="social-links">
                         <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
@@ -386,7 +386,7 @@
                 </div>
                 <div class="team-member-card">
                     <img src="https://images.pexels.com/photos/846741/pexels-photo-846741.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Amira El-Sayed, Operations Director">
-                    <h4>Ahmed Badrawi</h4>
+                    <h4> ...... </h4></h4>
                     <p>Operations Director</p>
                     <div class="social-links">
                         <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
@@ -394,8 +394,8 @@
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg" alt="Karim Mansour, Head of Logistics">
-                    <h4>Ahmed Badrawi</h4>
+                    <img src="https://i.postimg.cc/zBLxPG5p/Eng-Ahmed-Badrawi.jpg" alt="Ahmed Badrawi, Head of Logistics">
+                    <h4>Eng. Ahmed Badrawi</h4>
                     <p>Head of Digital Transformation</p>
                     <div class="social-links">
                         <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
