--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <div class="partners-track" id="partners-track">
                     <div class="partner"><img src="https://images.seeklogo.com/logo-png/4/2/dhl-logo-png_seeklogo-40800.png" alt="Partner 1" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?w=640" alt="Partner 2" style="height:48px;object-fit:contain"></div>
-                    <div class="partner"><img src="https://images.pexels.com/photos/3228877/pexels-photo-3228877.jpeg?w=640" alt="Partner 3" style="height:48px;object-fit:contain"></div>
+                    <div class="partner"><img src="https://media.licdn.com/dms/image/v2/C560BAQEquMqKFr0hQg/company-logo_200_200/company-logo_200_200/0/1634020975871?e=1760572800&v=beta&t=6WzOpEqxeLUGJ5rfqGCkiCcsxpuflZKlWlqWfwTBhtw" alt="Partner 3" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3184328/pexels-photo-3184328.jpeg?w=640" alt="Partner 4" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://yt3.googleusercontent.com/7qe0RVyD-YFIGwXwnijwD1o1NNfcz6MUJtmBM5CXBsACP5AKLd8-pQ6L_Ld8Xq-HlFTh7gm9aw=s900-c-k-c0x00ffffff-no-rj" alt="Partner 5" style="height:48px;object-fit:contain"></div>
                 </div>
