--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <div class="partner"><img src="https://images.seeklogo.com/logo-png/4/2/dhl-logo-png_seeklogo-40800.png" alt="Partner 1" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?w=640" alt="Partner 2" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://media.licdn.com/dms/image/v2/C560BAQEquMqKFr0hQg/company-logo_200_200/company-logo_200_200/0/1634020975871?e=1760572800&v=beta&t=6WzOpEqxeLUGJ5rfqGCkiCcsxpuflZKlWlqWfwTBhtw" alt="Partner 3" style="height:48px;object-fit:contain"></div>
-                    <div class="partner"><img src="https://images.pexels.com/photos/3184328/pexels-photo-3184328.jpeg?w=640" alt="Partner 4" style="height:48px;object-fit:contain"></div>
+                    <div class="partner"><img src="https://scontent.fcai20-1.fna.fbcdn.net/v/t39.30808-6/441876110_890655903101261_7162093956853545573_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=e9n0nS9CRO8Q7kNvwHe-4NU&_nc_oc=AdkoLcglIz-E3NVsIpGBTuGArmC9BUsEsnolDI1BTqFUcmAtvnJka0ZGy88g6LTfNEI&_nc_zt=23&_nc_ht=scontent.fcai20-1.fna&_nc_gid=ipr3qzXIRvKijKesAnuA2g&oh=00_AfYCNjug14Vu7KFjzMBcMd9AnBruEpUB9hOTe5fiSHi6Eg&oe=68CB383E" alt="Partner 4" style="height:48px;object-fit:contain"></div>
                     <div class="partner"><img src="https://yt3.googleusercontent.com/7qe0RVyD-YFIGwXwnijwD1o1NNfcz6MUJtmBM5CXBsACP5AKLd8-pQ6L_Ld8Xq-HlFTh7gm9aw=s900-c-k-c0x00ffffff-no-rj" alt="Partner 5" style="height:48px;object-fit:contain"></div>
                 </div>
             </div>
