--- a/index.html
+++ b/index.html
@@ -385,15 +385,6 @@
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://images.pexels.com/photos/846741/pexels-photo-846741.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Amira El-Sayed, Operations Director">
-                    <h4> ...... </h4></h4>
-                    <p>Operations Director</p>
-                    <div class="social-links">
-                        <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="Twitter profile"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="team-member-card">
                     <img src="https://i.postimg.cc/zBLxPG5p/Eng-Ahmed-Badrawi.jpg" alt="Ahmed Badrawi, Head of Logistics">
                     <h4>Eng. Ahmed Badrawi</h4>
                     <p>Head of Digital Transformation</p>
@@ -405,7 +396,7 @@
                 <div class="team-member-card">
                     <img src="https://images.pexels.com/photos/1036623/pexels-photo-1036623.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Fatma Hussein, Commercial Agent">
                     <h4>Nada El-Sayed</h4>
-                    <p>Commercial Agent</p>
+                    <p>Business Development Manager</p>
                     <div class="social-links">
                         <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#" aria-label="Twitter profile"><i class="fab fa-twitter"></i></a>
