--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
                 </div>
                 <div class="team-member-card">
                     <img src="https://i.postimg.cc/zBLxPG5p/Eng-Ahmed-Badrawi.jpg" alt="Ahmed Badrawi, Head of Logistics">
-                    <h4>Eng. Ahmed Badrawi</h4>
-                    <p>Head of Digital Transformation</p>
+                    <h4>Ahmed Badrawi</h4>
+                    <p>- - - </p>
                     <div class="social-links">
                         <a href="#" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#" aria-label="Twitter profile"><i class="fab fa-twitter"></i></a>
