--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <h2 id="partners-heading" class="animated-item" style="--delay: 0s;">Our Partners in Success</h2><p class="section-subtitle animated-item" style="--delay: 0.1s;">We work with a network of the best shipping and logistics companies around the world to ensure the highest standards of service.</p>
             <div class="partners-track">
                 <div class="partner animated-item" style="--delay: 0.2s;"><img src="DHL.png" alt="Partner Logo DHL"></div>
-                <div class="partner animated-item" style="--delay: 0.3s;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSy4G9MY8sAJioSMNtFu1h3hpaXzGa2wnrOA&s" alt="Partner Logo Nafeza"></div>
+                <div class="partner animated-item" style="--delay: 0.3s;"><img src="nafeza-en.svg" alt="Partner Logo Nafeza"></div>
                 <div class="partner animated-item" style="--delay: 0.4s;"><img src="https://via.placeholder.com/100x50?text=Partner+C" alt="Partner Logo C"></div>
                 <div class="partner animated-item" style="--delay: 0.5s;"><img src="https://via.placeholder.com/100x50?text=Partner+D" alt="Partner Logo D"></div>
                 <div class="partner animated-item" style="--delay: 0.6s;"><img src="https://via.placeholder.com/100x50?text=Partner+E" alt="Partner Logo E"></div>
