--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <div class="partner animated-item" style="--delay: 0.4s;"><img src="https://via.placeholder.com/100x50?text=Partner+C" alt="Partner Logo C"></div>
                 <div class="partner animated-item" style="--delay: 0.5s;"><img src="https://via.placeholder.com/100x50?text=Partner+D" alt="Partner Logo D"></div>
                 <div class="partner animated-item" style="--delay: 0.6s;"><img src="https://via.placeholder.com/100x50?text=Partner+E" alt="Partner Logo E"></div>
-                <div class="partner animated-item" style="--delay: 0.7s;"><img src="https://via.placeholder.com/100x50?text=Partner+F" alt="Partner Logo F"></div>
+                <div class="partner animated-item" style="--delay: 0.7s;"><img src="Fawry-Business-logo.png" alt="Partner Logo Fawry Business"></div>
                 <div class="partner animated-item" style="--delay: 0.8s;"><img src="https://via.placeholder.com/100x50?text=Partner+G" alt="Partner Logo G"></div>
             </div>
         </section>
