--- a/Sauvage.html
+++ b/Sauvage.html
@@ -367,11 +367,11 @@
                     <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(5)" alt="رجل سوفاج"></div>
                     <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Details" alt="تفاصيل عطر سوفاج"></div>
                     <!-- المجموعة الثانية (مكررة) -->
-                    <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Product+1" alt="لقطة لمنتج سوفاج"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Lifestyle+1" alt="نمط حياة سوفاج"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Nature+1" alt="طبيعة مستوحى منها سوفاج"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Product+2" alt="زجاجة عطر سوفاج"></div>
-                    <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Lifestyle+2" alt="رجل سوفاج"></div>
+                    <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(1)" alt="لقطة لمنتج سوفاج"></div>
+                    <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(2)" alt="نمط حياة سوفاج"></div>
+                    <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(3)" alt="طبيعة مستوحى منها سوفاج"></div>
+                    <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(4)" alt="زجاجة عطر سوفاج"></div>
+                    <div class="gallery-item"><img src="Perfumes/Sauvage-100ml-image(5)" alt="رجل سوفاج"></div>
                     <div class="gallery-item"><img src="https://via.placeholder.com/450x600.png/000000/FFFFFF?text=Details" alt="تفاصيل عطر سوفاج"></div>
                 </div>
             </div>
@@ -414,7 +414,7 @@
                 <div class="product-variant">EAU DE PARFUM - 100ML</div>
                 <div class="price">
                     <!-- ضع السعر هنا -->
-                    $155.00
+                    $30.00
                 </div>
                 <!-- ضع رابط الشراء هنا -->
                 <a href="#" class="purchase-button">أضف إلى السلة</a>
@@ -424,7 +424,7 @@
     
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 [اسم متجرك]. مستوحى من Dior. جميع الحقوق محفوظة.</p>
+            <p>&copy; 2025 amae. مستوحى من Dior. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
 
