Update contact email in سياسة-الإرجاع.html

--- a/ar/سياسة-الإرجاع.html
+++ b/ar/سياسة-الإرجاع.html
@@ -236,7 +236,7 @@
         <div class="contact-box">
             <h2>هل لديك استفسار آخر؟</h2>
             <p>فريق خدمة عملاء المصرية الإماراتية متاح لخدمتكم دائماً</p>
-            <a href="mailto:support@eg-uae.com" class="contact-btn">
+            <a href="mailto:digital@eg-uae.com" class="contact-btn">
                 <i class="fas fa-envelope"></i> تواصل معنا الآن
             </a>
             <p style="margin-top: 15px; font-size: 0.9rem;">أو اتصل بنا على: 013378572 (20+)</p>
