--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Al Masriya Al Emaratia — An integrated platform for import and export services, commercial representation, supply chain solutions, and logistics between Egypt, the UAE, and the world." />
     <meta name="author" content="Al Masriya Al Emaratia" />
     <meta name="keywords" content="import, export, customs clearance, international shipping, commercial agencies, Egypt, UAE" />
-
+    <meta name="google-adsense-account" content="ca-pub-5392118070977430">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
